[gd_scene load_steps=6 format=3 uid="uid://dojblxg1uvuww"]

[ext_resource type="Script" uid="uid://ba0eeb3xsp7bg" path="res://Enemies/SoulHarbinger/soulharbinger.gd" id="1_sx57a"]
[ext_resource type="SpriteFrames" uid="uid://d2vigstrnxj3t" path="res://Enemies/SoulHarbinger/SoulHarbinger.tres" id="2_khyqk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5tilg"]
height = 61.53846

[sub_resource type="CircleShape2D" id="CircleShape2D_k4hq0"]
radius = 209.28928

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dwxov"]
radius = 12.0
height = 63.73626

[node name="EnemySoulHarbringer" type="CharacterBody2D"]
script = ExtResource("1_sx57a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(6, -16)
sprite_frames = ExtResource("2_khyqk")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.86460906

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -13.000002)
scale = Vector2(0.91, 0.91)
shape = SubResource("CapsuleShape2D_5tilg")

[node name="Detection Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Area"]
shape = SubResource("CircleShape2D_k4hq0")

[node name="Wander Time" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(1, -27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, 14)
scale = Vector2(0.91, 0.91)
shape = SubResource("CapsuleShape2D_dwxov")

[connection signal="body_entered" from="Detection Area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection Area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Wander Time" to="." method="_on_wander_time_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
